@@ -6,16 +6,23 @@ import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import com.Contrack.dto.Notificacao.NotificacaoGetRequestDTO;
 import com.Contrack.dto.Notificacao.NotificacaoGetResponseDTO;
-import com.Contrack.enums.Status_Notificacao;
-import com.Contrack.exception.NotificacaoNaoExisteException;
+import com.Contrack.dto.Notificacao.NotificacaoPostRequestDTO;
+import com.Contrack.enums.Status;
 import com.Contrack.model.Notificacao;
+import com.Contrack.repository.DocumentoRepository;
 import com.Contrack.repository.NotificacaoRepository;
+import com.Contrack.repository.SetorRepository;
 
 import jakarta.transaction.Transactional;
 
@@ -25,11 +32,14 @@ public class NotificacaoServiceImpl implements NotificacaoService {
 
     @Autowired
     NotificacaoRepository notificacaoRepository;
-
+    @Autowired
+    SetorRepository setorRepository;
+    @Autowired
+    DocumentoRepository documentoRepository;
     @Autowired
     ModelMapper modelMapper;
 
-    @Override 
+    @Override
     public List<NotificacaoGetRequestDTO> listarNotificacoes() {
         return notificacaoRepository.findAll()
                 .stream()
@@ -39,30 +49,48 @@ public class NotificacaoServiceImpl implements NotificacaoService {
 
     @Override
     public NotificacaoGetResponseDTO obterNotificacaoPorId(Long id) {
-        Notificacao notificacao = notificacaoRepository.findById(id).orElseThrow(NotificacaoNaoExisteException::new);
+        Notificacao notificacao = notificacaoRepository.findById(id).
+                orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Notificação não encontrada"));
         return modelMapper.map(notificacao, NotificacaoGetResponseDTO.class);
     }
 
     @Override
     public NotificacaoGetResponseDTO marcarComoLida(Long id) {
-        Notificacao notificacao = notificacaoRepository.findById(id).orElseThrow(NotificacaoNaoExisteException::new);
+        Notificacao notificacao = notificacaoRepository.findById(id).
+            orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Notificação não encontrada"));
         if (!notificacao.isLido()) {
             notificacao.setLido(true);
-            notificacao.setStatus(Status_Notificacao.RESOLVIDO);
+            notificacao.setStatus(Status.RESOLVIDO);
         }
         return modelMapper.map(notificacaoRepository.save(notificacao), NotificacaoGetResponseDTO.class);
     }
 
     @Override
-    public List<NotificacaoGetResponseDTO> filtrarPorLido(boolean estado) {
-        List<Notificacao> notificacoesEncontradas = notificacaoRepository.findByLido(estado);
+    public Page<NotificacaoPostRequestDTO> filtrarPorLido(int pagina, int tamanho, boolean lido) {
+        Pageable pageable = PageRequest.of(pagina, tamanho, Sort.by(Sort.Order.desc("data"), Sort.Order.desc("id")));
+       
+        Page<Notificacao> paginaNotificacoesFiltradas = notificacaoRepository.findByLido(pageable, lido);
 
-        if(notificacoesEncontradas.isEmpty()) {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND,"Nenhuma notificação encontrada");
-        }
+        List<NotificacaoPostRequestDTO> notificacoesDTO = paginaNotificacoesFiltradas.getContent()
+                .stream()
+                .map(notificacao -> modelMapper.map(notificacao, NotificacaoPostRequestDTO.class))
+                .toList();
 
-       return notificacoesEncontradas.stream()
-                .map(n -> modelMapper.map(n, NotificacaoGetResponseDTO.class))
-                .collect(Collectors.toList());
+                return new PageImpl<>(notificacoesDTO, pageable, paginaNotificacoesFiltradas.getTotalElements());
+    }
+
+    @Override
+    public Page<NotificacaoPostRequestDTO> notificacaoPaginada(int pagina, int tamanho) {
+        Pageable pageable = PageRequest.of(pagina, tamanho, Sort.by(Sort.Order.desc("data"), Sort.Order.desc("id")));
+
+        Page<Notificacao> paginaNotificacoes = notificacaoRepository.findAll(pageable);
+
+        List<NotificacaoPostRequestDTO> notificacoesDTO = paginaNotificacoes.getContent()
+                .stream()
+                .map(notificacao -> modelMapper.map(notificacao, NotificacaoPostRequestDTO.class))
+                .toList();
+
+        return new PageImpl<>(notificacoesDTO, pageable, paginaNotificacoes.getTotalElements());
     }
 }
+
